// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | CardWithTabs Controlled Behaviour 1`] = `
Array [
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>,
  .c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c9 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c15 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c14 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  padding: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  height: 100%;
}

.c6 {
  padding: 0 20px;
}

.c0 .c3 {
  padding-bottom: 8px;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0 c1 c2"
  >
    <header
      className="c3 c4"
    >
      <h2
        className="c5"
        type="title3"
      >
        Title for the card
      </h2>
    </header>
    <ul
      className="c6 c7 c8"
      direction="row"
      role="tablist"
    >
      <li
        className="c9"
        role="presentation"
      >
        <span
          className="c10"
        >
          <button
            aria-selected={true}
            className="c11"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="c12"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="c9"
        role="presentation"
      >
        <span
          className="c13"
        >
          <button
            aria-selected={false}
            className="c11"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="c14"
              height={8}
            >
              Tab title 2
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c15"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="c16"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      Tab content 1
    </section>
  </div>,
]
`;

exports[`Storyshots Organisms | CardWithTabs Integration With Faded Scroll 1`] = `
.c21 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c19 {
  position: relative;
  overflow-x: hidden;
}

.c22 {
  height: 4px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c20 {
  height: 4px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c9 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c15 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c14 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  padding: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  height: 100%;
}

.c6 {
  padding: 0 20px;
}

.c0 .c3 {
  padding-bottom: 8px;
}

@media (min-width:976px) {
  .c17 {
    position: relative;
  }

  .c17::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c17 {
    position: relative;
  }

  .c17::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c18 {
    max-height: 80px;
    overflow-y: auto;
  }
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3 c4"
  >
    <h2
      className="c5"
      type="title3"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="c6 c7 c8"
    direction="row"
    role="tablist"
  >
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c10"
      >
        <button
          aria-selected={true}
          className="c11"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c12"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c13"
      >
        <button
          aria-selected={false}
          className="c11"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c14"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c15"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c16"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c17"
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <div
            className="c20"
          />
          <div
            className="c21"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
          </div>
          <div
            className="c22"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration With Faded Scroll With Height From Parent 1`] = `
.c22 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
}

.c3 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c20 {
  position: relative;
  overflow-x: hidden;
}

.c23 {
  height: 4px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  bottom: 0;
}

.c21 {
  height: 4px;
  width: 4px;
  position: absolute;
  right: 0;
  pointer-events: none;
  top: 0;
}

.c10 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c8 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c16 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c15 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  padding: 20px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c17 {
  height: 100%;
}

.c7 {
  padding: 0 20px;
}

.c1 .c4 {
  padding-bottom: 8px;
}

@media (min-width:976px) {
  .c18 {
    position: relative;
  }

  .c18::before {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
    top: 0;
    background: linear-gradient(0deg,#ffffff00 0%,#ffffffff 100%);
  }
}

@media (min-width:976px) {
  .c18 {
    position: relative;
  }

  .c18::after {
    content: '';
    display: block;
    width: 100%;
    height: 52px;
    position: absolute;
    left: 0;
    pointer-events: none;
    background: transparent;
    z-index: 1;
    opacity: 0;
    -webkit-transition: 0.3s opacity ease-out;
    transition: 0.3s opacity ease-out;
    bottom: 0;
    background: linear-gradient(0deg,#ffffffff 0%,#ffffff00 100%);
  }
}

@media (min-width:976px) {
  .c19 {
    min-height: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    -webkit-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    overflow-y: auto;
  }
}

@media (min-width:760px) {
  .c6 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:976px) {
  .c0 {
    height: 200px;
  }
}

<div
  className="c0 c1 c2 c3"
>
  <header
    className="c4 c5"
  >
    <h2
      className="c6"
      type="title3"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="c7 c8 c9"
    direction="row"
    role="tablist"
  >
    <li
      className="c10"
      role="presentation"
    >
      <span
        className="c11"
      >
        <button
          aria-selected={true}
          className="c12"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c13"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="c10"
      role="presentation"
    >
      <span
        className="c14"
      >
        <button
          aria-selected={false}
          className="c12"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c15"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c16"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c17"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c18"
    >
      <div
        className="c19"
      >
        <div
          className="c20"
        >
          <div
            className="c21"
          />
          <div
            className="c22"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
          </div>
          <div
            className="c23"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration With Typography And Extra Space Inside 1`] = `
.c17 {
  padding-left: 20px;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c9 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c15 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c14 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  padding: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  height: 100%;
}

.c6 {
  padding: 0 20px;
}

.c0 .c3 {
  padding-bottom: 8px;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3 c4"
  >
    <h2
      className="c5"
      type="title3"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="c6 c7 c8"
    direction="row"
    role="tablist"
  >
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c10"
      >
        <button
          aria-selected={true}
          className="c11"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c12"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c13"
      >
        <button
          aria-selected={false}
          className="c11"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c14"
            height={8}
          >
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              Custom title component
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c15"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="c16"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="c17"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs With Initial Active Tab Index 1`] = `
.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c9 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c15 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c12 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  padding: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
}

.c11 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c11,
.c11[type='button'],
.c11[type='reset'],
.c11[type='submit'] {
  -webkit-appearance: button;
}

.c11::-moz-focus-inner,
.c11[type='button']::-moz-focus-inner,
.c11[type='reset']::-moz-focus-inner,
.c11[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c11:-moz-focusring,
.c11[type='button']:-moz-focusring,
.c11[type='reset']:-moz-focusring,
.c11[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c8 {
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  height: 100%;
}

.c6 {
  padding: 0 20px;
}

.c0 .c3 {
  padding-bottom: 8px;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0 c1 c2"
>
  <header
    className="c3 c4"
  >
    <h2
      className="c5"
      type="title3"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="c6 c7 c8"
    direction="row"
    role="tablist"
  >
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c10"
      >
        <button
          aria-selected={false}
          className="c11"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c12"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="c9"
      role="presentation"
    >
      <span
        className="c13"
      >
        <button
          aria-selected={true}
          className="c11"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c14"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c15"
  />
  <section
    aria-labelledby="tabs-tab-1"
    className="c16"
    hidden={false}
    id="tabs-tabpanel-1"
    role="tabpanel"
  >
    2
  </section>
</div>
`;
